--- a/signInPage/signIn.css
+++ b/signInPage/signIn.css
@@ -157,7 +157,8 @@ body {
     opacity: 0.71;
     text-align: end;
     width: 100%;
-    display: block;
+    /* display: block; */
+    display: none;
 }
 
 .signInMainButton {
@@ -189,7 +190,8 @@ body {
     margin: 0 auto;
     border-top: 1px solid rgba(0, 0, 0, 0.719);
     margin-top: 22px;
-    display: flex;
+    /* display: flex; */
+    display: none;
     justify-content: center;
     align-items: flex-end;
     color: #282828;
